started new refactored version

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 /MarcelJoachimKloubert.SendNET/obj
 /MarcelJoachimKloubert.SendNET/bin
 /MarcelJoachimKloubert.SendNET/MarcelJoachimKloubert.SendNET.csproj.user
+/MarcelJoachimKloubert.SendNET.Test/obj
+/MarcelJoachimKloubert.SendNET.Test/bin
+/MarcelJoachimKloubert.SendNET.ConsoleApp/obj
+/MarcelJoachimKloubert.SendNET.ConsoleApp/bin
